--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
         "underscore": "1.5.2",
         "unidecode": "0.1.3",
         "validator": "1.4.0",
-        "when": "2.7.0"
+        "when": "2.7.0",
+        "caja-sanitizer": "0.1.1"
     },
     "optionalDependencies": {
         "mysql": "2.0.0-alpha9"
